--- a/src/main/res/layout/fragment_list_view.xml
+++ b/src/main/res/layout/fragment_list_view.xml
@@ -17,9 +17,7 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawSelectorOnTop="false"
-        android:listSelector="@android:color/holo_blue_bright">
+        android:layout_height="wrap_content">
 
     </ListView>
     
